src/bblocks/typesparser/BlockTypesParser.py
# Generated from ./BlockTypes.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BlockTypesParser ( Parser ):

    grammarFileName = "BlockTypes.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "':'", "'.'", "'+'", "'('", 
                     "')'", "'@'", "'or'", "'and'", "'='", "'=='", "'!='", 
                     "'['", "']'", "','", "'node'", "'properties'", "'events'", 
                     "'handlers'", "'predicates'" ]

    symbolicNames = [ "<INVALID>", "WS", "COLON", "DOT", "PLUS", "LPAREN", 
                      "RPAREN", "AT", "OR", "AND", "ASSIGN", "EQ", "NEQ", 
                      "LBRACKET", "RBRACKET", "COMMA", "NODE", "PROPERTIES", 
                      "EVENTS", "HANDLERS", "PREDICATES", "STRING_LITERAL", 
                      "IDENT", "INTEGER", "BLOCKCOMMENT", "LINECOMMENT" ]

    RULE_block_types = 0
    RULE_block_type_definition = 1
    RULE_attributes = 2
    RULE_attribute = 3
    RULE_attr_param = 4
    RULE_attr_param_value = 5
    RULE_string = 6
    RULE_integer = 7
    RULE_properties_section = 8
    RULE_properties = 9
    RULE_handlers_section = 10
    RULE_handlers = 11
    RULE_events_section = 12
    RULE_events = 13
    RULE_predicates_section = 14
    RULE_predicates = 15
    RULE_prop = 16
    RULE_event = 17
    RULE_handler = 18
    RULE_func_arguments = 19
    RULE_argument = 20
    RULE_handler_name = 21
    RULE_block_type = 22
    RULE_ident = 23
    RULE_pred = 24
    RULE_logical_expr = 25
    RULE_expr = 26

    ruleNames =  [ "block_types", "block_type_definition", "attributes", 
                   "attribute", "attr_param", "attr_param_value", "string", 
                   "integer", "properties_section", "properties", "handlers_section", 
                   "handlers", "events_section", "events", "predicates_section", 
                   "predicates", "prop", "event", "handler", "func_arguments", 
                   "argument", "handler_name", "block_type", "ident", "pred", 
                   "logical_expr", "expr" ]

    EOF = Token.EOF
    WS=1
    COLON=2
    DOT=3
    PLUS=4
    LPAREN=5
    RPAREN=6
    AT=7
    OR=8
    AND=9
    ASSIGN=10
    EQ=11
    NEQ=12
    LBRACKET=13
    RBRACKET=14
    COMMA=15
    NODE=16
    PROPERTIES=17
    EVENTS=18
    HANDLERS=19
    PREDICATES=20
    STRING_LITERAL=21
    IDENT=22
    INTEGER=23
    BLOCKCOMMENT=24
    LINECOMMENT=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Block_typesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BlockTypesParser.EOF, 0)

        def block_type_definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BlockTypesParser.Block_type_definitionContext)
            else:
                return self.getTypedRuleContext(BlockTypesParser.Block_type_definitionContext,i)


        def getRuleIndex(self):
            return BlockTypesParser.RULE_block_types

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_types" ):
                listener.enterBlock_types(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_types" ):
                listener.exitBlock_types(self)




    def block_types(self):

        localctx = BlockTypesParser.Block_typesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_block_types)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 54
                self.block_type_definition()
                self.state = 57 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BlockTypesParser.AT or _la==BlockTypesParser.NODE):
                    break

            self.state = 59
            self.match(BlockTypesParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_type_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attributes(self):
            return self.getTypedRuleContext(BlockTypesParser.AttributesContext,0)


        def NODE(self):
            return self.getToken(BlockTypesParser.NODE, 0)

        def ident(self):
            return self.getTypedRuleContext(BlockTypesParser.IdentContext,0)


        def COLON(self):
            return self.getToken(BlockTypesParser.COLON, 0)

        def properties_section(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BlockTypesParser.Properties_sectionContext)
            else:
                return self.getTypedRuleContext(BlockTypesParser.Properties_sectionContext,i)


        def handlers_section(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BlockTypesParser.Handlers_sectionContext)
            else:
                return self.getTypedRuleContext(BlockTypesParser.Handlers_sectionContext,i)


        def events_section(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BlockTypesParser.Events_sectionContext)
            else:
                return self.getTypedRuleContext(BlockTypesParser.Events_sectionContext,i)


        def predicates_section(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BlockTypesParser.Predicates_sectionContext)
            else:
                return self.getTypedRuleContext(BlockTypesParser.Predicates_sectionContext,i)


        def getRuleIndex(self):
            return BlockTypesParser.RULE_block_type_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_type_definition" ):
                listener.enterBlock_type_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_type_definition" ):
                listener.exitBlock_type_definition(self)




    def block_type_definition(self):

        localctx = BlockTypesParser.Block_type_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block_type_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.attributes()
            self.state = 62
            self.match(BlockTypesParser.NODE)
            self.state = 63
            self.ident()
            self.state = 64
            self.match(BlockTypesParser.COLON)
            self.state = 69 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 69
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BlockTypesParser.PROPERTIES]:
                    self.state = 65
                    self.properties_section()
                    pass
                elif token in [BlockTypesParser.HANDLERS]:
                    self.state = 66
                    self.handlers_section()
                    pass
                elif token in [BlockTypesParser.EVENTS]:
                    self.state = 67
                    self.events_section()
                    pass
                elif token in [BlockTypesParser.PREDICATES]:
                    self.state = 68
                    self.predicates_section()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 71 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BlockTypesParser.PROPERTIES) | (1 << BlockTypesParser.EVENTS) | (1 << BlockTypesParser.HANDLERS) | (1 << BlockTypesParser.PREDICATES))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BlockTypesParser.AttributeContext)
            else:
                return self.getTypedRuleContext(BlockTypesParser.AttributeContext,i)


        def getRuleIndex(self):
            return BlockTypesParser.RULE_attributes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributes" ):
                listener.enterAttributes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributes" ):
                listener.exitAttributes(self)




    def attributes(self):

        localctx = BlockTypesParser.AttributesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_attributes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BlockTypesParser.AT:
                self.state = 73
                self.attribute()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AT(self):
            return self.getToken(BlockTypesParser.AT, 0)

        def ident(self):
            return self.getTypedRuleContext(BlockTypesParser.IdentContext,0)


        def LPAREN(self):
            return self.getToken(BlockTypesParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(BlockTypesParser.RPAREN, 0)

        def attr_param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BlockTypesParser.Attr_paramContext)
            else:
                return self.getTypedRuleContext(BlockTypesParser.Attr_paramContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BlockTypesParser.COMMA)
            else:
                return self.getToken(BlockTypesParser.COMMA, i)

        def getRuleIndex(self):
            return BlockTypesParser.RULE_attribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute" ):
                listener.enterAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute" ):
                listener.exitAttribute(self)




    def attribute(self):

        localctx = BlockTypesParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attribute)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(BlockTypesParser.AT)
            self.state = 80
            self.ident()

            self.state = 81
            self.match(BlockTypesParser.LPAREN)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BlockTypesParser.IDENT:
                self.state = 82
                self.attr_param()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BlockTypesParser.COMMA:
                    self.state = 83
                    self.match(BlockTypesParser.COMMA)
                    self.state = 84
                    self.attr_param()
                    self.state = 89
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 92
            self.match(BlockTypesParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_paramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(BlockTypesParser.IdentContext,0)


        def ASSIGN(self):
            return self.getToken(BlockTypesParser.ASSIGN, 0)

        def attr_param_value(self):
            return self.getTypedRuleContext(BlockTypesParser.Attr_param_valueContext,0)


        def getRuleIndex(self):
            return BlockTypesParser.RULE_attr_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr_param" ):
                listener.enterAttr_param(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr_param" ):
                listener.exitAttr_param(self)




    def attr_param(self):

        localctx = BlockTypesParser.Attr_paramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attr_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.ident()
            self.state = 95
            self.match(BlockTypesParser.ASSIGN)
            self.state = 96
            self.attr_param_value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_param_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(BlockTypesParser.StringContext,0)


        def integer(self):
            return self.getTypedRuleContext(BlockTypesParser.IntegerContext,0)


        def getRuleIndex(self):
            return BlockTypesParser.RULE_attr_param_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr_param_value" ):
                listener.enterAttr_param_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr_param_value" ):
                listener.exitAttr_param_value(self)




    def attr_param_value(self):

        localctx = BlockTypesParser.Attr_param_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attr_param_value)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BlockTypesParser.STRING_LITERAL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.string()
                pass
            elif token in [BlockTypesParser.INTEGER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.integer()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_LITERAL(self):
            return self.getToken(BlockTypesParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return BlockTypesParser.RULE_string

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)




    def string(self):

        localctx = BlockTypesParser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(BlockTypesParser.STRING_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntegerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(BlockTypesParser.INTEGER, 0)

        def getRuleIndex(self):
            return BlockTypesParser.RULE_integer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger" ):
                listener.enterInteger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger" ):
                listener.exitInteger(self)




    def integer(self):

        localctx = BlockTypesParser.IntegerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_integer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(BlockTypesParser.INTEGER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Properties_sectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROPERTIES(self):
            return self.getToken(BlockTypesParser.PROPERTIES, 0)

        def COLON(self):
            return self.getToken(BlockTypesParser.COLON, 0)

        def properties(self):
            return self.getTypedRuleContext(BlockTypesParser.PropertiesContext,0)


        def getRuleIndex(self):
            return BlockTypesParser.RULE_properties_section

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProperties_section" ):
                listener.enterProperties_section(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProperties_section" ):
                listener.exitProperties_section(self)




    def properties_section(self):

        localctx = BlockTypesParser.Properties_sectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_properties_section)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(BlockTypesParser.PROPERTIES)
            self.state = 107
            self.match(BlockTypesParser.COLON)
            self.state = 108
            self.properties()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropertiesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BlockTypesParser.PropContext)
            else:
                return self.getTypedRuleContext(BlockTypesParser.PropContext,i)


        def getRuleIndex(self):
            return BlockTypesParser.RULE_properties

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProperties" ):
                listener.enterProperties(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProperties" ):
                listener.exitProperties(self)




    def properties(self):

        localctx = BlockTypesParser.PropertiesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_properties)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BlockTypesParser.IDENT:
                self.state = 110
                self.prop()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Handlers_sectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HANDLERS(self):
            return self.getToken(BlockTypesParser.HANDLERS, 0)

        def COLON(self):
            return self.getToken(BlockTypesParser.COLON, 0)

        def handlers(self):
            return self.getTypedRuleContext(BlockTypesParser.HandlersContext,0)


        def getRuleIndex(self):
            return BlockTypesParser.RULE_handlers_section

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHandlers_section" ):
                listener.enterHandlers_section(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHandlers_section" ):
                listener.exitHandlers_section(self)




    def handlers_section(self):

        localctx = BlockTypesParser.Handlers_sectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_handlers_section)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(BlockTypesParser.HANDLERS)
            self.state = 117
            self.match(BlockTypesParser.COLON)
            self.state = 118
            self.handlers()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HandlersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def handler(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BlockTypesParser.HandlerContext)
            else:
                return self.getTypedRuleContext(BlockTypesParser.HandlerContext,i)


        def getRuleIndex(self):
            return BlockTypesParser.RULE_handlers

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHandlers" ):
                listener.enterHandlers(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHandlers" ):
                listener.exitHandlers(self)




    def handlers(self):

        localctx = BlockTypesParser.HandlersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_handlers)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BlockTypesParser.IDENT:
                self.state = 120
                self.handler()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Events_sectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EVENTS(self):
            return self.getToken(BlockTypesParser.EVENTS, 0)

        def COLON(self):
            return self.getToken(BlockTypesParser.COLON, 0)

        def events(self):
            return self.getTypedRuleContext(BlockTypesParser.EventsContext,0)


        def getRuleIndex(self):
            return BlockTypesParser.RULE_events_section

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvents_section" ):
                listener.enterEvents_section(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvents_section" ):
                listener.exitEvents_section(self)




    def events_section(self):

        localctx = BlockTypesParser.Events_sectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_events_section)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(BlockTypesParser.EVENTS)
            self.state = 127
            self.match(BlockTypesParser.COLON)
            self.state = 128
            self.events()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def event(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BlockTypesParser.EventContext)
            else:
                return self.getTypedRuleContext(BlockTypesParser.EventContext,i)


        def getRuleIndex(self):
            return BlockTypesParser.RULE_events

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvents" ):
                listener.enterEvents(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvents" ):
                listener.exitEvents(self)




    def events(self):

        localctx = BlockTypesParser.EventsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_events)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BlockTypesParser.IDENT:
                self.state = 130
                self.event()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Predicates_sectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PREDICATES(self):
            return self.getToken(BlockTypesParser.PREDICATES, 0)

        def COLON(self):
            return self.getToken(BlockTypesParser.COLON, 0)

        def predicates(self):
            return self.getTypedRuleContext(BlockTypesParser.PredicatesContext,0)


        def getRuleIndex(self):
            return BlockTypesParser.RULE_predicates_section

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicates_section" ):
                listener.enterPredicates_section(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicates_section" ):
                listener.exitPredicates_section(self)




    def predicates_section(self):

        localctx = BlockTypesParser.Predicates_sectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_predicates_section)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(BlockTypesParser.PREDICATES)
            self.state = 137
            self.match(BlockTypesParser.COLON)
            self.state = 138
            self.predicates()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredicatesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pred(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BlockTypesParser.PredContext)
            else:
                return self.getTypedRuleContext(BlockTypesParser.PredContext,i)


        def getRuleIndex(self):
            return BlockTypesParser.RULE_predicates

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicates" ):
                listener.enterPredicates(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicates" ):
                listener.exitPredicates(self)




    def predicates(self):

        localctx = BlockTypesParser.PredicatesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_predicates)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BlockTypesParser.LPAREN) | (1 << BlockTypesParser.IDENT) | (1 << BlockTypesParser.INTEGER))) != 0):
                self.state = 140
                self.pred()
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(BlockTypesParser.IdentContext,0)


        def COLON(self):
            return self.getToken(BlockTypesParser.COLON, 0)

        def block_type(self):
            return self.getTypedRuleContext(BlockTypesParser.Block_typeContext,0)


        def getRuleIndex(self):
            return BlockTypesParser.RULE_prop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProp" ):
                listener.enterProp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProp" ):
                listener.exitProp(self)




    def prop(self):

        localctx = BlockTypesParser.PropContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_prop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.ident()
            self.state = 147
            self.match(BlockTypesParser.COLON)
            self.state = 148
            self.block_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(BlockTypesParser.IdentContext,0)


        def LPAREN(self):
            return self.getToken(BlockTypesParser.LPAREN, 0)

        def func_arguments(self):
            return self.getTypedRuleContext(BlockTypesParser.Func_argumentsContext,0)


        def RPAREN(self):
            return self.getToken(BlockTypesParser.RPAREN, 0)

        def getRuleIndex(self):
            return BlockTypesParser.RULE_event

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvent" ):
                listener.enterEvent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvent" ):
                listener.exitEvent(self)




    def event(self):
